--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,43 @@
-requests==2.32.5
+# Core dependencies
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.13.1
+scikit-learn==1.5.2
+
+# Geospatial libraries
+geopandas==0.14.4
+fiona==1.9.6
+gdal==3.8.4
+shapely==2.0.6
+pyproj==3.6.1
+rtree==1.2.0
+osmnx==1.9.2
+rasterio==1.3.10
+pyogrio==0.11.1
+
+# Visualization
+matplotlib==3.8.4
+folium==0.19.1
+branca==0.7.2
+mapclassify==2.6.1
+
+# Web & HTTP
+requests==2.32.3
 aiohttp==3.13.2
-numpy==2.3.3
-random
-folium==0.20.0
-geopandas==1.1.1
-pandas==2.3.2
-shapely==2.1.2
+httpx==0.28.1
+websocket-client==1.9.0
 
+# Jupyter & Notebook
+jupyter==1.1.1
+jupyterlab==4.5.0
+ipykernel==7.1.0
+ipython==8.37.0
+ipywidgets==8.1.8
 
-
+# Utilities
+click==8.1.8
+pillow==10.4.0
+joblib==1.4.2
+python-dateutil==2.9.0.post0
+pyyaml==6.0.3
+certifi==2024.12.14
