--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ workspace.xml
 
 # Diretórios temporários
 **/.virtual_documents/
+**/anaconda_projects/
 **/.ipynb_checkpoints/
 **/__pycache__/
 .ipynb_checkpoints/
